tests/syntactic/syntax10/syntax10.err
Error: syntax error, unexpected *, expecting end of file in file syntax10.dl at line 1
*
^-
1 errors generated, evaluation aborted
