tests/syntactic/syntax10/syntax10.dl
*
//  Check error that is first location is reported correctly
